[gd_scene load_steps=3 format=3 uid="uid://kdvypg24fud"]

[ext_resource type="Script" path="res://Scripts/UI/wave_hud.gd" id="1_kcrld"]
[ext_resource type="PackedScene" uid="uid://drhl2f4q4h4jp" path="res://Scenes/UIScenes/HealthBar.tscn" id="2_mxu1v"]

[node name="WaveHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcrld")

[node name="HealthBar" parent="." instance=ExtResource("2_mxu1v")]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 611.0
offset_bottom = 56.0

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_right = 61.0
offset_bottom = 45.0
grow_horizontal = 2
scale = Vector2(0.99542, 1.00537)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "100/100"

[node name="RoundWaveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.02
anchor_right = 0.5
anchor_bottom = 0.02
offset_left = -99.0
offset_right = 99.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Round: 1 Wave: 1"

[connection signal="value_changed" from="HealthBar" to="." method="_on_health_bar_value_changed"]
